# ci-exercises

./: CMakeLists  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: CI-cpp.yml  CI.yml
scripts/: build.py
src/: converter.py  main.cpp  pi_estimator.cpp  pi_estimator.h
tests/: test_converter.py  test_pi_estimator.cpp
